apps/base/pterodactyl/pterodactyl-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl-panel
  template:
    metadata:
      labels:
        app: pterodactyl-panel
    spec:
      containers:
        - name: panel
          image: ghcr.io/pterodactyl/panel:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: panel-storage
              mountPath: /var/www/html
      volumes:
        - name: panel-storage
          persistentVolumeClaim:
            claimName: pterodactyl-panel-pvc
