apps/base/pterodactyl/pterodactyl-panel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pterodactyl-panel
