apps/base/pterodactyl/pterodactyl-panel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-panel
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pterodactyl.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: pterodactyl-panel
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-panel-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pterodactyl.${DOMAIN_EXTERNAL}`)
      kind: Rule
      services:
        - name: pterodactyl-panel
          port: http
  tls:
    secretName: ${CERT_SECRET_EXTERNAL}
